# ogre-procedural

./: .hgtags  CMakeLists.txt  README.md
CMake/: CMakeLists.txt
CMake/Templates/: SDK_CMakeLists.txt.in  html.cfg.in
CMake/Utils/: FindPkgMacros.cmake  PrecompiledHeader.cmake  PreprocessorUtils.cmake  ProceduralConfigTargets.cmake
docs/: CMakeLists.txt
samples/: CMakeLists.txt
samples/common/src/: BaseApplication.cpp
samples/extrusion/: CMakeLists.txt
samples/extrusion/src/: Extrusion.cpp
samples/primitives/: CMakeLists.txt
samples/primitives/src/: Primitives.cpp
tests/: CMakeLists.txt
tests/include/: Tests.h
tests/src/: Tests.cpp
